Inclusão de validação nas rotas
