# src/controllers/atividade.js
@@ -6,7 +6,11 @@ const getById = async (req, res, next) => {
         const retorno = await atividadeService.getById(id);
         res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
+        if (err.message === 'Atividade não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
     }
 };
 
@@ -15,9 +19,8 @@ const postAtividade = async (req, res, next) => {
         const retorno = await atividadeService.postAtividade(req.body);
         res.status(201).json(retorno);
     } catch (err) {
-        console.log(req.body);
         res.status(500).send(err.message);
-    }   
+    }
 };
 
 const putAtividade = async (req, res, next) => {
@@ -25,10 +28,14 @@ const putAtividade = async (req, res, next) => {
         let params = req.body;
         params.id = req.params.id;
         const retorno = await atividadeService.putAtividade(params);
-        res.status(204).json(retorno);
+        res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Atividade não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 const patchAtividade = async (req, res, next) => {
@@ -36,19 +43,27 @@ const patchAtividade = async (req, res, next) => {
         let params = req.body;
         params.id = req.params.id;
         const retorno = await atividadeService.patchAtividade(params);
-        res.status(204).json(retorno);
+        res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Atividade não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 const deleteAtividade = async (req, res, next) => {
     try {
         const retorno = await atividadeService.deleteAtividade(req.params);
-        res.status(204).json(retorno);
+        res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Atividade não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 module.exports.getById = getById;
