# src/controllers/projetofuncionario.js
@@ -6,7 +6,11 @@ const getById = async (req, res, next) => {
         const retorno = await projetoFuncionarioService.getById(id);
         res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
+        if (err.message === 'Relação ProjetoFuncionario não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
     }
 };
 
@@ -15,9 +19,8 @@ const postProjetoFuncionario = async (req, res, next) => {
         const retorno = await projetoFuncionarioService.postProjetoFuncionario(req.body);
         res.status(201).json(retorno);
     } catch (err) {
-        console.log(req.body);
         res.status(500).send(err.message);
-    }   
+    }
 };
 
 const putProjetoFuncionario = async (req, res, next) => {
@@ -25,10 +28,14 @@ const putProjetoFuncionario = async (req, res, next) => {
         let params = req.body;
         params.id = req.params.id;
         const retorno = await projetoFuncionarioService.putProjetoFuncionario(params);
-        res.status(204).json(retorno);
+        res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Relação ProjetoFuncionario não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 const patchProjetoFuncionario = async (req, res, next) => {
@@ -36,10 +43,14 @@ const patchProjetoFuncionario = async (req, res, next) => {
         let params = req.body;
         params.id = req.params.id;
         const retorno = await projetoFuncionarioService.patchProjetoFuncionario(params);
-        res.status(204).json(retorno);
+        res.status(200).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Relação ProjetoFuncionario não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 const deleteProjetoFuncionario = async (req, res, next) => {
@@ -47,8 +58,12 @@ const deleteProjetoFuncionario = async (req, res, next) => {
         const retorno = await projetoFuncionarioService.deleteProjetoFuncionario(req.params);
         res.status(204).json(retorno);
     } catch (err) {
-        res.status(500).send(err.message);
-    }   
+        if (err.message === 'Relação ProjetoFuncionario não encontrada') {
+            res.status(404).send(err.message);
+        } else {
+            res.status(500).send(err.message);
+        }
+    }
 };
 
 module.exports.getById = getById;
